Fix spacing on login/signup form

--- a/app/assets/stylesheets/application_layout.scss
+++ b/app/assets/stylesheets/application_layout.scss
@@ -18,7 +18,7 @@ body, p, ol, ul, td, a {
   font-family: $os_font_family;
   font-size:   14px;
   font-weight: normal;
-  font-color:  black;
+  color:  #000;
 }
 
 #page-heading {
